# qrstatic

./: CODECS.md  Cargo.toml  EVALS.md  PLAN.md  README.md  TEMPORAL.md  temporal_results.tsv
crates/qrstatic/: Cargo.toml
crates/qrstatic-cli/: Cargo.toml
crates/qrstatic-cli/src/: binary_container.rs  main.rs  temporal_eval.rs  temporal_tiled_eval.rs
crates/qrstatic-debug-macos/: Cargo.toml
crates/qrstatic-debug-macos/src/: main.rs
crates/qrstatic-debug-tui/: Cargo.toml
crates/qrstatic-debug-tui/src/: main.rs  state.rs  theme.rs  ui.rs
crates/qrstatic/src/: error.rs  grid.rs  lib.rs  prng.rs
crates/qrstatic/src/codec/: analog.rs  binary.rs  common.rs  mod.rs  temporal.rs  temporal_packet.rs  temporal_tiled.rs
crates/qrstatic/src/qr/: decode.rs  encode.rs  format.rs  mod.rs  reed_solomon.rs
crates/qrstatic/tests/: codec_analog.rs  codec_audio.rs  codec_binary.rs  codec_layered.rs  codec_temporal.rs  codec_temporal_packet.rs  codec_xor.rs
crates/qrstatic/tests/common/: analog.rs  binary.rs  signed.rs  sliding.rs  xor.rs
prompts/: slide-0-title.md  slide-1-xor.md  slide-2-signed.md  slide-3-binary.md  slide-4-analog.md  slide-5-layered.md  slide-6-sliding.md  slide-7-audio.md  slide-8-temporal.md  slide-8b-research.md
src/: bits.rs  error.rs  lib.rs  prng.rs  sha256.rs
src/codec/: analog.rs  audio.rs  binary.rs  layered.rs  mod.rs  signed.rs  sliding.rs  xor.rs
src/qr/: decode.rs  encode.rs  gf256.rs  mask.rs  mod.rs  reed_solomon.rs
tests/: codec_analog.rs  codec_audio.rs  codec_binary.rs  codec_layered.rs  codec_signed.rs  codec_sliding.rs  codec_xor.rs  hygiene.rs
tests/common/: analog.rs  binary.rs  layered.rs  sliding.rs
